# ppd-gtk

./: .gitignore  Cargo.toml  build.rs  flake.nix
res/: profile_row.blp  resources.gresource.xml  window.blp
src/: main.rs
src/profile_object/: imp.rs  mod.rs
src/profile_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
